--- a/index.html
+++ b/index.html
@@ -16,115 +16,148 @@
   </head>
 
   <body>
-      <div class="container-fluid">
-          <div class="row">
-              <div class="col">
-                  <div class="social-links">
-                      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href=""><i class="fa-brands fa-instagram"></i></a>
-                      <a href=""><i class="fa-brands fa-twitter"></i></a>
-                  </div>
-              </div>
-              <div class="col-10">
-                  <ul class="nav justify-content-end">
-                      <li class="nav-item dropdown">
-                          <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Accueil</a>
-                          <ul class="dropdown-menu">
-                              <li><a class="dropdown-item text-wrap" href="#">Les Arcs Film Festival</a></li>
-                              <li><a class="dropdown-item" href="#">Blog</a></li>
-                              <li><a class="dropdown-item" href="#">Newsletter</a></li>
-                              <li><a class="dropdown-item" href="#">Cinéma Green Lab</a></li>
-                              <li><a class="dropdown-item" href="#">Slope Of Fame</a></li>
-                              <li><a class="dropdown-item" href="#">@lesarcsfilmfest</a></li>
-                          </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Programmation</a>
-                          <ul class="dropdown-menu">
-                              <li><a class="dropdown-item text-wrap" href="#">Appel à films 2022</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Palmarès 2021</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Invités d'honneur 2021</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Catalogue 2021</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Programmation</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Le Lab Femmes de Cinéma</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Les scolaires au festival</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Comité de sélection</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Statistiques</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Archives</a></li>
-                          </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Professionels</a>
-                          <ul class="dropdown-menu">
-                              <li><a class="dropdown-item text-wrap" href="#">LOGIN</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Covid-19</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Industry Village</a>
-                                  <ul>
-                                      <li><a href="#">Village des Coproductions</a></li>
-                                      <li><a href="#">Work in Progress</a></li>
-                                      <li><a href="#">Music Village</a></li>
-                                      <li><a href="#">Talent Village</a></li>
-                                      <li><a href="#">Les principaux Flocons des Arcs</a></li>
-                                      <li><a href="#">Industry Village Awards 2021</a></li>
-                                  </ul>
-                              </li>
-                              <li><a class="dropdown-item text-wrap" href="#">Le Sommet Distributeurs/Exploitants</a>
-                                  <ul>
-                                      <li><a href="#">Le programme du Sommet des Arcs 2021</a></li>
-                                      <li><a href="#">Hors Piste Cinéma</a></li>
-                                  </ul>
-                              </li>
-                          </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">À propos</a>
-                          <ul class="dropdown-menu">
-                              <li><a class="dropdown-item text-wrap" href="#">Édito</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">L’Équipe du festival</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Partenaires</a>
-                                  <ul>
-                                      <li><a href="#">La Flèche de Cristal</a></li>
-                                  </ul>
-                              </li>
-                              <li><a class="dropdown-item text-wrap" href="#">Mécènes</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Le Club</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Notre politique de confidentialité (RGPD)</a></li>
-                          </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Infos pratiques</a>
-                          <ul class="dropdown-menu">
-                              <li><a class="dropdown-item text-wrap" href="#">Covid 19</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Votre séjour aux Arcs</a>
-                                  <ul>
-                                      <li><a href="#">Hébergement</a></li>
-                                      <li><a href="#">Le Ski</a></li>
-                                      <li><a href="#">Se restaurer</a></li>
-                                      <li><a href="#">Les Commerces</a></li>
-                                  </ul>
-                              </li>
-                              <li><a class="dropdown-item text-wrap" href="#">Se rendre au festival</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Les Lieux du festival</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Le Guide de survie du festival</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Venir avec vos enfants</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Accessibilité pour tous</a></li>
-                          </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Presse</a>
-                          <ul class="dropdown-menu">
-                              <li><a class="dropdown-item text-wrap" href="#">Communiqués et dossiers de presse</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Accréditation Presse</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Espace téléchargement</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Photothèque</a></li>
-                              <li><a class="dropdown-item text-wrap" href="#">Revue de presse sélective</a></li>
-                          </ul>
-                      </li>
-                  </ul>  
-              </div>
-          </div>
+    <!-- <div id="sidebar">
+        <div class="shortcuts">
+            <div class="my-account">
+                <a href="#"><i class="fa-solid fa-user"></i></a>
+                <p>Mon compte public</p>
+            </div>
+            <div class="tickets">
+                <a href="#"><i class="fa-solid fa-ticket"></i></a>
+                <p>Billetterie</p>
+            </div>
+        </div>
+        <div class="social-links">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+        </div>
+    </div> -->
+    <div class="container">
+        <div class="top-menu">
+            <div class="search">
+                <i class="fa-solid fa-magnifying-glass" id="search"></i>
+            </div>
+            <div class="lang">
+                <a href="#">fr</i></a>
+                <a href="#">en</i></a>
+            </div>
+            <div class="shortcuts">
+                <a href="#"><i class="fa-solid fa-user"></i></a>
+                <a href="#"><i class="fa-solid fa-ticket"></i></a>
+            </div>
+            <div class="social-links">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </div>
+        <div class="navbar row">
+            <div class="col-2" id="logo">
+                <img src="./img/logo-laff.png" alt="logo-laff" style="max-width: inherit;">
+            </div>
+            <div class="col">
+                <ul class="nav justify-content-end">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Accueil</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item text-wrap" href="#">Les Arcs Film Festival</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Blog</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Newsletter</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Cinéma Green Lab</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Slope Of Fame</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">@lesarcsfilmfest</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Programmation</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item text-wrap" href="#">Appel à films 2022</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Palmarès 2021</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Invités d'honneur 2021</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Catalogue 2021</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Programmation</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Le Lab Femmes de Cinéma</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Les scolaires au festival</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Comité de sélection</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Statistiques</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Archives</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Professionels</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item text-wrap" href="#">LOGIN</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Covid-19</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Industry Village</a>
+                                <ul>
+                                    <li><a href="#">Village des Coproductions</a></li>
+                                    <li><a href="#">Work in Progress</a></li>
+                                    <li><a href="#">Music Village</a></li>
+                                    <li><a href="#">Talent Village</a></li>
+                                    <li><a href="#">Les principaux Flocons des Arcs</a></li>
+                                    <li><a href="#">Industry Village Awards 2021</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="dropdown-item text-wrap" href="#">Le Sommet Distributeurs/Exploitants</a>
+                                <ul>
+                                    <li><a href="#">Le programme du Sommet des Arcs 2021</a></li>
+                                    <li><a href="#">Hors Piste Cinéma</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">À propos</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item text-wrap" href="#">Édito</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">L’Équipe du festival</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Partenaires</a>
+                                <ul>
+                                    <li><a href="#">La Flèche de Cristal</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="dropdown-item text-wrap" href="#">Mécènes</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Le Club</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Notre politique de confidentialité (RGPD)</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Infos pratiques</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item text-wrap" href="#">Covid 19</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Votre séjour aux Arcs</a>
+                                <ul>
+                                    <li><a href="#">Hébergement</a></li>
+                                    <li><a href="#">Le Ski</a></li>
+                                    <li><a href="#">Se restaurer</a></li>
+                                    <li><a href="#">Les Commerces</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="dropdown-item text-wrap" href="#">Se rendre au festival</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Les Lieux du festival</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Le Guide de survie du festival</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Venir avec vos enfants</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Accessibilité pour tous</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Presse</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item text-wrap" href="#">Communiqués et dossiers de presse</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Accréditation Presse</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Espace téléchargement</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Photothèque</a></li>
+                            <li><a class="dropdown-item text-wrap" href="#">Revue de presse sélective</a></li>
+                        </ul>
+                    </li>
+                </ul>  
+            </div>
+        </div>
 
-      </div>
+    </div>
+    
+    <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
