--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
             <div class="search">
                 <i class="fa-solid fa-magnifying-glass" id="search"></i>
             </div>
-            <div class="lang">
-                <a href="#">fr</i></a>
-                <a href="#">en</i></a>
-            </div>
             <div class="shortcuts">
                 <a href="#"><i class="fa-solid fa-user"></i></a>
                 <a href="#"><i class="fa-solid fa-ticket"></i></a>
@@ -51,12 +47,16 @@
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-twitter"></i></a>
             </div>
+            <div class="lang">
+                <a href="#">fr</i></a>
+                <a href="#">en</i></a>
+            </div>
         </div>
         <div class="navbar row">
-            <div class="col-2" id="logo">
+            <div class="col" id="logo">
                 <img src="./img/logo-laff.png" alt="logo-laff" style="max-width: inherit;">
             </div>
-            <div class="col">
+            <div class="col-10">
                 <ul class="nav justify-content-end">
                     <li class="nav-item dropdown">
                         <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Accueil</a>
@@ -154,7 +154,15 @@
                 </ul>  
             </div>
         </div>
-
+    </div>
+    <div class="container">
+        <section class="row" id="section-1">
+            <div class="col presentation">
+                <p>LES ARCS FILM FESTIVAL</p>
+                <p>14e édition</p>
+                <p>du 10 au 17 décembre 2022</p>
+            </div>
+        </section>
     </div>
     
     <footer></footer>
