--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +25,7 @@
             <a href=""><i class="fa-brands fa-twitter"></i></a>
         </div>
     </div> -->
-    <header>
+    <!-- <header>
         <div class="container-fluid" id="header">
             <div class="row">
                 <div class="col-9" id="logo">
@@ -33,7 +35,7 @@
                     <div class="row">
                         <div class="nav col shortcuts">
                             <div class="row">
-                                <!-- <i class="fa-solid fa-magnifying-glass" id="search"></i> -->
+                                <i class="fa-solid fa-magnifying-glass" id="search"></i>
                                 <div class="col nav-item dropdown">
                                     <a class="nav-link"><i class="fa-solid fa-user"></i></a>
                                     <ul class="dropdown-menu">
@@ -46,14 +48,14 @@
                                         <li><a class="dropdown-item" href="#">Billetterie</a></li>
                                     </ul>
                                 </div>
-                                <!-- <div class="col compte">
+                                <div class="col compte">
                                     <a href="#"><i class="fa-solid fa-user"></i></a>
                                     <p>Mon compte</p>
                                 </div>
                                 <div class="col tickets">
                                     <a href="#"><i class="fa-solid fa-ticket"></i></a>
                                     <p>Billetterie</p>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
                         <div class="col social-links">
@@ -69,113 +71,146 @@
                 </div>
             </div>
         </div>
-    </header>
-    <nav>
+    </header> -->
+
         <div class="container-fluid" id="navbar">
-            <ul class="nav justify-content-end">
-                <li class="nav-item dropdown">
-                    <a class="nav-link">Accueil</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item text-wrap" href="#">Les Arcs Film Festival</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Blog</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Newsletter</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Cinéma Green Lab</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Slope Of Fame</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">@lesarcsfilmfest</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link">Programmation</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item text-wrap" href="#">Appel à films 2022</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Palmarès 2021</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Invités d'honneur 2021</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Catalogue 2021</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Programmation</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Le Lab Femmes de Cinéma</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Les scolaires au festival</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Comité de sélection</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Statistiques</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Archives</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link">Professionnels</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item text-wrap" href="#">LOGIN</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Covid-19</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Industry Village</a>
-                            <ul>
-                                <li><a href="#">Village des Coproductions</a></li>
-                                <li><a href="#">Work in Progress</a></li>
-                                <li><a href="#">Music Village</a></li>
-                                <li><a href="#">Talent Village</a></li>
-                                <li><a href="#">Les principaux Flocons des Arcs</a></li>
-                                <li><a href="#">Industry Village Awards 2021</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="dropdown-item text-wrap" href="#">Le Sommet Distributeurs/Exploitants</a>
-                            <ul>
-                                <li><a href="#">Le programme du Sommet des Arcs 2021</a></li>
-                                <li><a href="#">Hors Piste Cinéma</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link">À propos</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item text-wrap" href="#">Édito</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">L’Équipe du festival</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Partenaires</a>
-                            <ul>
-                                <li><a href="#">La Flèche de Cristal</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="dropdown-item text-wrap" href="#">Mécènes</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Le Club</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Notre politique de confidentialité (RGPD)</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link">Infos pratiques</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item text-wrap" href="#">Covid 19</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Votre séjour aux Arcs</a>
-                            <ul>
-                                <li><a href="#">Hébergement</a></li>
-                                <li><a href="#">Le Ski</a></li>
-                                <li><a href="#">Se restaurer</a></li>
-                                <li><a href="#">Les Commerces</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="dropdown-item text-wrap" href="#">Se rendre au festival</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Les Lieux du festival</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Le Guide de survie du festival</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Venir avec vos enfants</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Accessibilité pour tous</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link">Presse</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item text-wrap" href="#">Communiqués et dossiers de presse</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Accréditation Presse</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Espace téléchargement</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Photothèque</a></li>
-                        <li><a class="dropdown-item text-wrap" href="#">Revue de presse sélective</a></li>
-                    </ul>
-                </li>
-            </ul>  
+            <!-- <div class="col" id="logo">
+                <img src="./img/logo-laff.png" alt="logo-laff" style="max-width: 140px;">
+            </div> -->
+            <div id="menu">
+                <ul>
+                    <li>
+                        <a class="btn-overlay" href="#">Accueil</a>
+                        <div class="overlay">
+                            <div class="container">
+                                <ul>
+                                    <li><a  href="#">Les Arcs Film Festival</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Newsletter</a></li>
+                                    <li><a href="#">Cinéma Green Lab</a></li>
+                                    <li><a href="#">Slope Of Fame</a></li>
+                                    <li><a href="#">@lesarcsfilmfest</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="btn-overlay" href="#">Programmation</a>
+                        <div class="overlay">
+                            <div class="container">
+                                <ul>
+                                    <li><a  href="#">Appel à films 2022</a></li>
+                                    <li><a href="#">Palmarès 2021</a></li>
+                                    <li><a href="#">Invités d'honneur 2021</a></li>
+                                    <li><a href="#">Catalogue 2021</a></li>
+                                    <li><a href="#">Programmation</a></li>
+                                    <li><a href="#">Le Lab Femmes de Cinéma</a></li>
+                                    <li><a href="#">Les scolaires au festival</a></li>
+                                    <li><a href="#">Comité de sélection</a></li>
+                                    <li><a href="#">Statistiques</a></li>
+                                    <li><a href="#">Archives</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="btn-overlay" href="#">Professionnels</a>
+                        <div class="overlay">
+                            <div class="container">
+                                <ul>
+                                    <li><a  href="#">LOGIN</a></li>
+                                    <li><a href="#">Covid-19</a></li>
+                                    <li><a href="#">Industry Village</a>
+                                        <!-- <ul>
+                                            <li><a href="#">Village des Coproductions</a></li>
+                                            <li><a href="#">Work in Progress</a></li>
+                                            <li><a href="#">Music Village</a></li>
+                                            <li><a href="#">Talent Village</a></li>
+                                            <li><a href="#">Les principaux Flocons des Arcs</a></li>
+                                            <li><a href="#">Industry Village Awards 2021</a></li>
+                                        </ul> -->
+                                    </li>
+                                    <li><a href="#">Le Sommet Distributeurs/Exploitants</a>
+                                        <!-- <ul>
+                                            <li><a href="#">Le programme du Sommet des Arcs 2021</a></li>
+                                            <li><a href="#">Hors Piste Cinéma</a></li>
+                                        </ul> -->
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="btn-overlay" href="#">À propos</a>
+                        <div class="overlay">
+                            <div class="container">
+                                <ul>
+                                    <li><a  href="#">Édito</a></li>
+                                    <li><a href="#">L’Équipe du festival</a></li>
+                                    <li><a href="#">Partenaires</a>
+                                        <span><a href="#">La Flèche de Cristal</a></span>
+                                    </li>
+                                    <li><a href="#">Mécènes</a></li>
+                                    <li><a href="#">Le Club</a></li>
+                                    <li><a href="#">Notre politique de confidentialité (RGPD)</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="btn-overlay" href="#">Infos pratiques</a>
+                        <div class="overlay">
+                            <div class="container">
+                                <ul>
+                                    <li><a  href="#">Covid 19</a></li>
+                                    <li><a href="#">Votre séjour aux Arcs</a>
+                                        <!-- <ul>
+                                            <li><a href="#">Hébergement</a></li>
+                                            <li><a href="#">Le Ski</a></li>
+                                            <li><a href="#">Se restaurer</a></li>
+                                            <li><a href="#">Les Commerces</a></li>
+                                        </ul> -->
+                                    </li>
+                                    <li><a href="#">Se rendre au festival</a></li>
+                                    <li><a href="#">Les Lieux du festival</a></li>
+                                    <li><a href="#">Le Guide de survie du festival</a></li>
+                                    <li><a href="#">Venir avec vos enfants</a></li>
+                                    <li><a href="#">Accessibilité pour tous</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="btn-overlay" href="#">Presse</a>
+                        <div class="overlay">
+                            <div class="container">
+                                <ul>
+                                    <li><a  href="#">Communiqués et dossiers de presse</a></li>
+                                    <li><a href="#">Accréditation Presse</a></li>
+                                    <li><a href="#">Espace téléchargement</a></li>
+                                    <li><a href="#">Photothèque</a></li>
+                                    <li><a href="#">Revue de presse sélective</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
         <section id="presentation">
             <div class="container-fluid">
                 <div class="title">
-                    <h1>14e édition<span>10 - 17 décembre 2022</span></h1>
+                    <div id="logo">
+                        <img src="./img/logo-laff.png" alt="logo-laff" style="max-width: 140px;">
+                    </div>
+                    <div class="separateur"></div>
+                    <div id="festival-dates">
+                        <p>14ème édition</p>
+                    </div>
                 </div>
                 <div class="image">
-                    <img src="./img/image.jpg" alt="">
+                    <div class="title-edition">Du 10 au 17<br>décembre 2022</div>
                 </div>
             </div>
         </section>
@@ -232,5 +267,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="overlay.js"></script>
   </body>
 </html>
