--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <section id="nav-secondaire">
                 <div class="overlay">
                 </div>
+                <div class="not-overlay"></div>
                     <ul id="souscat1">
                         <li><a  href="#">Les Arcs Film Festival</a></li>
                         <li><a href="#">Blog</a></li>
